[#721] Add public method Text.getCJKAdjustedLength()
Closes #721